Can get stuck in world nodes when switching from Cycles to BI #38798

Closed
opened 2014-02-24 09:38:29 +01:00 by gandalf3 · 9 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: 10f4c62 (2.67 RC)

Short description of error
Switching to BI from cycles while world nodes are being edited makes you stuck in world nodes until you switch back to Cycles, as the button for switching disappears.

Exact steps for others to reproduce the error

  1. Open default.blend and switch to cycles, then open the node editor.
  2. With material nodes selected, switch to world nodes
  3. Switch render engine back to BI
  4. You are now stuck editing world nodes until you switch back to cycles and change the engine back to cycles.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: 10f4c62 (2.67 RC) **Short description of error** Switching to BI from cycles while world nodes are being edited makes you stuck in world nodes until you switch back to Cycles, as the button for switching disappears. **Exact steps for others to reproduce the error** 1. Open default.blend and switch to cycles, then open the node editor. 2. With material nodes selected, switch to world nodes 3. Switch render engine back to BI 4. You are now stuck editing world nodes until you switch back to cycles and change the engine back to cycles.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Brecht Van Lommel was assigned by Lukas Tönne 2014-02-24 10:41:37 +01:00
Member

Added subscribers: @brecht, @LukasTonne

Added subscribers: @brecht, @LukasTonne
Member

@brecht: The SpaceNode.shaderfrom setting gets hidden in the UI, but still is used internally in shader_get_from_context and node_area_listener regardless of whether "new shading nodes" is possible. This is quite messy, i've looked into adding checks for BKE_scene_use_new_shading_nodes, but at least for the listener we don't have scene access, so that's not feasible. Any ideas?

@brecht: The SpaceNode.shaderfrom setting gets hidden in the UI, but still is used internally in shader_get_from_context and node_area_listener regardless of whether "new shading nodes" is possible. This is quite messy, i've looked into adding checks for BKE_scene_use_new_shading_nodes, but at least for the listener we don't have scene access, so that's not feasible. Any ideas?

You can access the scene from the screen in the listener, I think that's the right solution.

You can access the scene from the screen in the listener, I think that's the right solution.

This issue was referenced by blender/blender-addons-contrib@b5aef37c27

This issue was referenced by blender/blender-addons-contrib@b5aef37c27f5fb2a4bb4227253f81d886ddd796c

This issue was referenced by b5aef37c27

This issue was referenced by b5aef37c27f5fb2a4bb4227253f81d886ddd796c
Brecht Van Lommel was unassigned by Lukas Tönne 2014-02-24 13:23:15 +01:00
Lukas Tönne self-assigned this 2014-02-24 13:23:15 +01:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit b5aef37c27.

Closed by commit b5aef37c27.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38798
No description provided.